docs/tests/parser/declarations/valid/VarDeclArray2D.src
fn void test() {
    let int matrix[3][4];
    let float grid[10][10];
}
