docs/tests/parser/declarations/invalid/VarDeclArrayMissingCloseBracket.src
fn void test() {
    let int a[10;
}
